<resources>
    <string name="app_name">Pocket Rhythm Trainer</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Do you really want to erase all the scores?</string>
    <string name="close">Close</string>
    <string name="clear_title">Erase everything</string>
    <string name="again">Try last exercise again</string>
    <string name="default_tempo">120</string>
    <string name="default_meter">3</string>
    <string name="default_bars">20</string>
    <string name="default_loud">2</string>
    <string name="default_silent">1</string>
    <string name="delete">Delete all</string>
    <string name="delete_item">Delete round</string>
    <string name="empty_score_board">There are no players in the score list.</string>
    <string name="empty_field">Emty field.</string>
    <string name="help">Help</string>
    <string name="hide_information">Hide information</string>
    <string name="how_tempo_trainer">Tempo trainer plays your required tempo and mutes it for a number of bars you define. First, you have to specify bpm value of the tempo and the meter. Second, you have to specify number of bars to play, and number of bars to go mute.</string>
    <string name="info_tempo_trainer">Tempo trainer is a metronome-like tool that allows you to train stability and speed of your tempo.</string>
    <string name="intro_tempo_trainer">This is Tempo trainer. \n ¿What do you want to do?</string>
    <string name="menu_help">Keep pressing to erase</string>
    <string name="meter">Meter [beats per bar]</string>
    <string name="music_score">Music Score</string>
    <string name="new_exercise">New exercise</string>
    <string name="ok">OK</string>
    <string name="order_player">Order by player</string>
    <string name="order_round">Order by round</string>
    <string name="play">Play</string>
    <string name="press_start">Press start!</string>
    <string name="save_message">Do you want to save this round?</string>
    <string name="show_score">Show score table</string>
    <string name="save_title">Save score</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="tap">TAP</string>
    <string name="tempo">Tempo [BPM]</string>
    <string name="text_duration">Number of bars</string>
    <string name="text_loud">Number of loud bars</string>
    <string name="text_silent">Number of silent bars</string>
    <string name="title_activity_end_of_exercise">End of exercise</string>
    <string name="title_activity_play_tempo">Play Tempo</string>
    <string name="title_activity_save_round">Save round</string>
    <string name="title_activity_show_scores">Board of scores</string>
    <string name="title_activity_tempo_settings">New exercise</string>
    <string name="your_name_here">Your name here</string>
    <string name="what_is_tempo_trainer">What is Tempo trainer?</string>
</resources>
