<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.irene.pocketrhythmtrainer.TempoSettings">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music_score"
        android:id="@+id/text_score"
        android:textSize="@dimen/font_size_title"
        android:layout_margin="@dimen/margin_element"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary"
        android:layout_below="@id/text_score"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tempo"
        android:id="@+id/text_tempo"
        android:layout_below="@+id/text_score"
        android:textSize="@dimen/font_size_element"
        android:layout_margin="@dimen/margin_element"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Meter"
        android:id="@+id/text_meter"
        android:layout_below="@+id/text_tempo"
        android:textSize="@dimen/font_size_element"
        android:layout_margin="@dimen/margin_element"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cycle"
        android:id="@+id/text_cycle"
        android:layout_below="@+id/text_meter"
        android:textSize="@dimen/font_size_title"
        android:layout_margin="@dimen/font_size_element"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary"
        android:layout_below="@id/text_cycle"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_duration"
        android:id="@+id/text_duration"
        android:layout_below="@+id/text_cycle"
        android:textSize="@dimen/font_size_element"
        android:layout_margin="@dimen/margin_element"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_loud"
        android:id="@+id/text_loud"
        android:layout_below="@+id/text_duration"
        android:textSize="@dimen/font_size_element"
        android:layout_margin="@dimen/margin_element"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_silent"
        android:id="@+id/text_silent"
        android:layout_below="@+id/text_loud"
        android:textSize="@dimen/font_size_element"
        android:layout_margin="@dimen/margin_element"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:id="@+id/buttonPlay"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/font_size_title"/>
</RelativeLayout>
