<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@drawable/beat_music"
    tools:context=".PlayTempoActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/play_tempo_title"
        android:text="@string/title_activity_play_tempo"
        android:textSize="@dimen/font_size_element"
        android:textColor="#FFFFFF"
        android:padding="@dimen/margin_element"
        android:background="@color/colorPrimary"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_element"
        android:layout_below="@+id/play_tempo_title"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:id="@+id/text_tempo"
        android:textSize="@dimen/font_size_element"
        android:padding="@dimen/margin_element"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tap"
        android:id="@+id/buttonTap"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:soundEffectsEnabled="false"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:id="@+id/buttonStart"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_element"/>

</RelativeLayout>
